src/test/deca/context/valid/return-field-implicit.deca
// Description:
//    Déclare une méthode qui retourne un field
//
// Resultats:
//    //
//
// Historique:
//    cree le 13/01/2023

class A{
    int x;
    int instruction(){
        return x;
    }
}
